# bmad-poc

./: .env  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README-old.md  README.md  Web-app-prompt 1  db-manage.bat  db-manage.sh  dev-health.bat  dev-health.sh  dev-start.bat  dev-start.sh  dev-stop.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  test-automation.bat  test-automation.sh  tsconfig.json
backend/: .dockerignore  .env  .flake8  .gitignore  Dockerfile  Makefile  alembic.ini  debug_response.py  init.sql  main.py  pyproject.toml  requirements.txt  seed_demo_users.py  test.db  test_debug.db
backend/alembic/: env.py
backend/alembic/versions/: 2025_08_20_1537_526562e78ecc_initial_database_schema.py  2025_08_20_1538_2ba896dddd29_add_assignments_and_history_tables.py  2025_08_20_1538_4714f1f1b495_add_remaining_tables.py  2025_08_21_1220_a008fe75f94e_add_user_management_fields_and_history_.py  2025_08_21_1221_099a4f65c6f3_add_user_history_table.py  2025_08_22_1000_enhance_group_model_and_add_history.py
backend/app/: __init__.py  database.py  exceptions.py  main.py  middleware.py  seed_data.py  test_database.py
backend/app/api/: auth.py  clients.py  collaboration.py  groups.py  health.py  milestones.py  projects.py  templates.py  users.py  users_backup.py
backend/app/config/: dev_server.py
backend/app/core/: __init__.py  exception_handlers.py  exceptions.py  logging_config.py  middleware.py
backend/app/models/: __init__.py  assignment.py  base.py  client.py  collaboration.py  milestone.py  project.py  sow.py  user.py  user_history.py  user_history_backup.py
backend/app/schemas/: __init__.py  auth.py  client.py  collaboration.py  milestone.py  project.py  response.py  user.py
backend/app/services/: __init__.py  auth_service.py  client_service.py  group_service.py  milestone_service.py  project_analytics.py  project_service.py  user_service.py
backend/app/tests/: conftest.py  test_auth.py  test_auth_api.py  test_auth_endpoints.py  test_auth_service.py  test_client_service.py  test_clients.py  test_security.py  test_user_api.py  test_user_security.py  test_user_service.py  test_user_service_new_features.py
(+193 files in other folders)
